# atom_sdk

./: .gitignore  LICENSE  README.md  test.py
Matlab/Goertzel_algorithm/: GTZ_ALL_frequency_detection.m  Single_frequency_detection.m
atom_encryption/: MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
atom_encryption/atom_encryption/: __init__.py  error_detection_tools.py  irreversible_encryption_tools.py  reversible_encryption_tools.py  type_encode_decode_tools.py
atom_encryption/test/: test_error_detection_tools.py  test_irreversible_encryption.py  test_reversible_encryption.py  test_type_encode_decode_tools.py
atom_uart_protocol/: MANIFEST.in  setup.py
python/: tips.md
python/crawler/: crawler_basic.py  slot_config.yaml
python/database/: __init__.py  db_basic.py  db_tool.py  read_files.py  tb_db_tool.py
python/encryption/: encryption_tool.py
python/excel/: excel_basic.py
python/jupyter/: MPPAlgorithm_mean_peak_pressure.ipynb  kalman_filter.ipynb
python/log/: u_logger.py
python/pygame/: settings.py
python/references/: pandas数据分析库.md  万能Markdown数学公式.md
python_project/log/: struct_logger.py  u_logger.py
python_project/pygame/: main.py
python_project/sendEmail/: test.xlsx
python_sdk/: README.md
python_sdk/atom_database/: MANIFEST.in  README.md  setup.py
python_sdk/atom_encryption/: MANIFEST.in  README.md  requirements.txt  setup.py
python_sdk/atom_files/: MANIFEST.in  README.md  requirements.txt  setup.py
python_sdk/log/: __init__.py
python_sdk/pygame/: button.py
python_sdk/read_files_SDK/: LICENSE  MANIFEST.in  (+2 more)
(+50 files in other folders)
