[metadata]
name = atom-encryption
version = 1.1.0
description = A Python library for reversible and irreversible encryption tools.
long_description = file: README.md
long_description_content_type = text/markdown
author = alfred
author_email = alfred.zhang98@gmail.com
url = https://github.com/yourusername/atom-encryption
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = encryption, AES, RSA, ECC, cryptography, security

[options]
packages = find:
install_requires =
    cryptography
    bcrypt
    twofish
python_requires = >=3.8

[options.packages.find]
include = atom_encryption
